--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,12 @@
 	<script type="text/javascript" src="js/jquery.mobile-1.0b3pre.js"></script>
 </head>
 <body> 
-	<section id="home" data-role="page">
+	<section id="home" data-role="page" data-theme="a" >
 		<header data-role="header"><h1>Mobile Log - Home</h1></header> 
 		<div data-role="content"> 
-			<p>Home Page</p> 
+
+                        <button>Tap to record</button>
+
                         <a href="#log">View log</a>
                 </div>
 		<footer data-role="footer">
