change page title

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Sencha Touch</title>
+<title>Mobile Log</title>
   <link rel="stylesheet" href="http://cdn.sencha.io/touch/1.1.0/resources/css/sencha-touch.css" type="text/css" media="screen"/>
   <link rel="stylesheet" href="stylesheets/styles.css" type="text/css" media="screen"/>
 
