--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,10 @@
   <script src="http://cdn.sencha.io/touch/1.1.0/sencha-touch.js" type="text/javascript"></script>
   <!-- app, models, stores, views, controllers [in that order!] -->
   <script src="app/app.js" type="text/javascript"></script>
+  <script src="app/models/Event.js" type="text/javascript"></script>
+  <script src="app/stores/Events.js" type="text/javascript"></script>
   <script src="app/views/Viewport.js" type="text/javascript"></script>
+
 
 </head>
 <body>
