implement clear button

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Mobile Log</title>
+  <link rel="shortcut icon" href="favicon.ico"/>
   <link rel="stylesheet" href="http://cdn.sencha.io/touch/1.1.0/resources/css/sencha-touch.css" type="text/css" media="screen"/>
   <link rel="stylesheet" href="stylesheets/styles.css" type="text/css" media="screen"/>
 
@@ -16,6 +17,5 @@
 
 </head>
 <body>
-
 </body>
 </html>
