--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Mobile Log</title>
   <link rel="shortcut icon" href="favicon.ico"/>
+  <link rel="apple-touch-icon" href="favicon.ico">
   <link rel="stylesheet" href="http://cdn.sencha.io/touch/1.1.0/resources/css/sencha-touch.css" type="text/css" media="screen"/>
   <link rel="stylesheet" href="stylesheets/styles.css" type="text/css" media="screen"/>
 
